--- a/notebooks/EDA_1_exploring.ipynb
+++ b/notebooks/EDA_1_exploring.ipynb
@@ -2961,7 +2961,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.8"
+   "version": "3.9.8 (main, Nov 14 2022, 15:56:43) \n[Clang 14.0.0 (clang-1400.0.29.202)]"
   },
   "orig_nbformat": 4,
   "vscode": {
